Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Added support for user password resetting.
- Add an interface to manage languages in a portal
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- cpsinstaller better check of elementtree optional import