@@ -5,9 +5,12 @@ New features:
 ~~~~~~~~~~~~~
 - Added support for user password resetting.
 - Add an interface to manage languages in a portal
+- DocRenderBox can now render objects with give id (code need to be cleaned up,
+  but the current implementation is currently not good enough anyway)
 Bug fixes:
 ~~~~~~~~~~
 -
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - cpsinstaller better check of elementtree optional import
+- Changed method name: getContents() -> getContent()
